made use of a new utility. switch button-ratings to using grid. fixed cards incorrect gap size.

--- a/design-tokens.css
+++ b/design-tokens.css
@@ -177,6 +177,11 @@
   margin: 0;
 }
 
+/* Padding */
+.no-padding {
+  padding: 0;
+}
+
 /* Colors */
 .text-white {
   color: var(--color-white);
